--- a/composer.json
+++ b/composer.json
@@ -5,33 +5,24 @@
 	"license": [
 		"GPL-3.0"
 	],
-	"support": {
-		"email": "antik494@gmail.com",
-		"issues": "https://github.com/WebChemistry/Filter/issues"
-	},
 	"keywords": [
 		"data",
 		"layer"
 	],
-	"authors": [
-		{
-			"name": "MartkCz",
-			"email": "antik494@gmail.com"
-		}
-	],
 	"require": {
-		"nette/application": "^2.4",
-		"nette/forms": "^2.4"
+		"nette/application": "^3.0",
+		"nette/forms": "^3.0"
 	},
 	"require-dev": {
-		"kdyby/doctrine": ">= 2.3.0",
+		"kdyby/doctrine": ">= 3.0",
 		"codeception/codeception": "^2.1",
-		"nette/database": "^2.3",
-		"latte/latte": "^2.3"
+		"nette/database": "^3.0",
+		"latte/latte": "^3.0"
 	},
+	"minimum-stability": "alpha",
 	"autoload": {
-		"classmap": [
-			"src/"
-		]
+		"psr-4": {
+			"WebChemistry\\Filter\\": "src/"
+		}
 	}
 }
